# solana-explorer-cli

./: Cargo.toml  Makefile  README.md  ROADMAP.md
src/: account.rs  main.rs  output.rs  rpc.rs  transaction.rs
src/balance/: mod.rs
src/magiceden/: cm.rs
src/metaplex/: das.rs
src/token/: mod.rs
tests/: accounts_test.sh
