[package]
name = "solana-explorer-cli"
version = "0.1.1"
edition = "2021"
authors = ["Dmitry Shvetsov <shvetsovdm+solana-explorer-cli@gmail.com>"]
license = "MIT"
description = "Command line interface to explorer solana blockchain state"
readme = "README.md"
homepage = "https://github.com/dmshvetsov/solana-explorer-cli"
repository = "https://github.com/dmshvetsov/solana-explorer-cli"
keywords = ["cli", "solana", "explorer"]
categories = ["command-line-utilities"]

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = "1.0.203"
serde_json = "1.0.117"
solana-client = "1.18.16"
solana-sdk = "1.18.16"
spl-token = "4.0.0"
