[package]
name = "solana-explorer-cli"
version = "0.2.1"
edition = "2021"
authors = ["Dmitry Shvetsov <shvetsovdm+solana-explorer-cli@gmail.com>"]
license = "MIT"
description = "Command line interface to explorer solana blockchain state"
readme = "README.md"
homepage = "https://github.com/dmshvetsov/solana-explorer-cli"
repository = "https://github.com/dmshvetsov/solana-explorer-cli"
keywords = ["cli", "solana", "explorer"]
categories = ["command-line-utilities"]

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-lang-idl = { version ="0.1.1", features = ["convert"] }
clap = { version = "4.5.7", features = ["derive"] }
flate2 = "1.0.35"
serde = "1.0.203"
serde_json = "1.0.117"
solana-client = "1.9.9"
solana-sdk = "1.9.9"
solana-transaction-status = "1.9.9"
spl-token = "4.0.0"
