[package]
name = "solana-explorer-cli"
version = "0.2.2"
edition = "2021"
authors = ["Dmitry Shvetsov <shvetsovdm+solana-explorer-cli@gmail.com>"]
license = "MIT"
description = "Command line interface to explorer solana blockchain state"
readme = "README.md"
homepage = "https://github.com/dmshvetsov/solana-explorer-cli"
repository = "https://github.com/dmshvetsov/solana-explorer-cli"
keywords = ["cli", "solana", "explorer"]
categories = ["command-line-utilities"]

[[bin]]
name = "se"
path = "src/main.rs"

[dependencies]
borsh = "=0.10.3"
clap = { version = "4.5.7", features = ["derive"] }
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }
serde = "1.0.203"
serde_json = "1.0.117"
solana-client = "2.1.6"
solana-sdk = "2.1.6"
solana-transaction-status = "2.1.6"
spl-token = "7.0.0"
